@@ -1,5 +1,9 @@
 2010-02-18  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>
 
+	* ObjectManipulator.cpp (ObjectManipulator::contextMenuRequested):
+	fixed #1255 context menu items "Lock" and "Unlock" are not updated
+	after object is locked.
+
 	* ProjectPanel_events.cpp (ProjectPanel::event): fixed #1253
 	Locking an object in the tree causes GUI crash.
 
